--- a/docs/authDocs.yaml
+++ b/docs/authDocs.yaml
@@ -1,5 +1,5 @@
 paths:
-  /register:
+  /auth/register:
     post:
       summary: Register a new user
       tags:
@@ -63,7 +63,7 @@ paths:
         "500":
           description: Internal server error
 
-  /login:
+  /auth/login:
     post:
       summary: Login an existing user
       tags:
